--- a/src/index.css
+++ b/src/index.css
@@ -39,7 +39,7 @@ h1, h2{
 
 .destacados img {
   max-width: 100%;
-  height: auto;
+  height: 75%;
 }
 
 footer {
@@ -54,6 +54,7 @@ footer {
 .footer-column {
   flex-basis: 33.33%;
   margin-bottom: 10px;
+  font-family: 'Source Code Pro', monospace;
 }
 
 .rights {
@@ -65,20 +66,26 @@ footer {
 }
 
 .share {
-  text-align: right;
+  text-align: center;
 }
 
 .social-links {
   display: flex;
-  justify-content: flex-end;
+  justify-content:flex-end;
 }
 
-.social-link {
-  margin-left: 10px;
-  color: #555;
-  text-decoration: none;
-}
+
 
 .social-link:hover {
-  color: #333;
+  color: #333333;
+  border-radius: 80%;
+}
+
+
+.ver-todos-link{
+  padding-top: 5px;
+}
+
+.a {
+  text-decoration: none;
 }
