--- a/src/Estilos/card.css
+++ b/src/Estilos/card.css
@@ -1,11 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Bruno+Ace+SC&display=swap');
 
 .tarjetas {
   
     text-decoration: none;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+     
     
   }
+  
    .card{
+    font-family: 'Bruno Ace SC', cursive;
     box-shadow: 0 1px 4px rgba(0, 0, 0, .3),
                 -23px 0 20px -23px rgba(0, 0, 0, .8),
                 23px 0 20px -23px rgba(0, 0, 0, .8),
@@ -15,6 +18,7 @@
   /* Estilos para las tarjetas en dispositivos de escritorio */
 @media (max-width: 600px) {
   .tarjetas .card {
+
     box-shadow: 0 1px 4px rgba(0, 0, 0, .3),
                 -23px 0 20px -23px rgba(0, 0, 0, .8),
                 23px 0 20px -23px rgba(0, 0, 0, .8),
@@ -24,8 +28,13 @@
 }
 
 /* Estilos para las tarjetas en dispositivos móviles */
-@media (max-width: 640px) {
+@media (min-width: 640px) {
   .tarjetas .card {
+
+    margin: auto;
+    width: auto;
+    padding-left: auto;
+    height: auto;
     box-shadow: 0 1px 2px rgba(0, 0, 0, .2); /* Un sombreado más ligero para dispositivos móviles */
     /* Puedes ajustar los valores de box-shadow según tus preferencias */
   }
