--- a/src/Estilos/loader.css
+++ b/src/Estilos/loader.css
@@ -13,9 +13,9 @@
     width:100px;
     height:48px;
     background: 
-      radial-gradient(circle closest-side,#1EF47A 90%,#0000) 0%   50%,
-      radial-gradient(circle closest-side,#1EF47A 90%,#0000) 50%  50%,
-      radial-gradient(circle closest-side,#1EF47A 90%,#0000) 100% 50%;
+      radial-gradient(circle closest-side,#f4851e 90%,#0000) 0%   50%,
+      radial-gradient(circle closest-side,#e9f41e 90%,#0000) 50%  50%,
+      radial-gradient(circle closest-side,#cdf674 90%,#0000) 100% 50%;
     background-size:calc(100%/3) 24px;
     background-repeat: no-repeat;
     animation:d3 1s infinite linear;
