--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,8 @@
 @import url("./Estilos/footer.css");
 @import url("./Estilos/detalleDeProducto.css");
 @import url("./Estilos/container.css");
+@import url("./Estilos/navbar.css");
+@import url("./Estilos/botonos.css");
 @import url('https://fonts.googleapis.com/css2?family=Aclonica&family=Black+Ops+One&family=Bungee+Spice&family=Creepster&family=Hanalei&family=Hind:wght@300;400;500;600;700&family=Quantico:ital,wght@1,700&family=Source+Code+Pro&display=swap');
 
 body {
@@ -12,26 +14,26 @@ body {
   padding: 0;
   font-family: 'Source Code Pro', monospace;
 }
-.menu{
-  font-family: 'Source Code Pro', monospace;
-}
 
 
 /* Estilos para el título principal */
 .main-title {
-  font-family: 'Bungee Spice', cursive;
+  font-family: "Russo One", sans-serif;
+  color: #cfc0b2;
   text-align: center;
   font-size: 70px;
   margin-bottom: 20px;
   padding-top: 20px;
   padding-bottom: 20px;
+  -webkit-text-stroke: 2px black;
+ 
 }
 
 
 @media (max-width: 768px) {
   /* Agrega aquí los estilos específicos para dispositivos móviles */
   .main-title {
-    font-size: 40px; /* Por ejemplo, ajustar el tamaño del título para dispositivos móviles */
+    font-size: 30px; /* Por ejemplo, ajustar el tamaño del título para dispositivos móviles */
   }
 
   /* Agrega más estilos responsivos para dispositivos móviles si es necesario */
