--- a/src/assets/Estilos/detalleDeProducto.css
+++ b/src/assets/Estilos/detalleDeProducto.css
@@ -61,7 +61,8 @@
   }
 
   .producto-detalle h3.titulo {
-    font-size: 30px; /* Ajusta el tamaño del título para dispositivos móviles */
+    font-size: 30px; 
+    padding-left: 20px;/* Ajusta el tamaño del título para dispositivos móviles */
   }
 
   .producto-detalle p.categoria,
